// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Counter /> layout renders Counter 1`] = `
<div
  className="mfui-beta-counter"
>
  <button
    className="mfui-beta-counter__btn mfui-beta-counter__btn_left"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <test-file-stub
      className="mfui-beta-counter__icon"
    />
  </button>
  <div
    className="mfui-beta-counter__input-box"
  >
    <input
      className="mfui-beta-counter__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      value={0}
    />
  </div>
  <button
    className="mfui-beta-counter__btn mfui-beta-counter__btn_right"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <test-file-stub
      className="mfui-beta-counter__icon"
    />
  </button>
</div>
`;

exports[`<Counter /> layout renders Counter with props 1`] = `
<div
  className="mfui-beta-counter mfui-beta-counter_disabled root-class"
>
  <button
    className="mfui-beta-counter__btn mfui-beta-counter__btn_left button-minus-class"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <test-file-stub
      className="mfui-beta-counter__icon"
    />
  </button>
  <div
    className="mfui-beta-counter__input-box"
  >
    <input
      className="mfui-beta-counter__input input-class"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      value={10}
    />
  </div>
  <button
    className="mfui-beta-counter__btn mfui-beta-counter__btn_right button-plus-class"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <test-file-stub
      className="mfui-beta-counter__icon"
    />
  </button>
</div>
`;
